# pimpmydrone

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  create_1000x1000.sh  create_100x100.sh  create_10x10.sh
ci/: haskell.yml  python.yml
docs/: overview.md
haskell/: README.md  coverage-core.cabal  stack.yaml
haskell/app/: Partitioner.hs  Planner.hs
haskell/src/Algorithm/: AStar.hs
haskell/src/Cost/: Evaluate.hs
haskell/src/Coverage/: Boustro.hs  Repair.hs  STC.hs
haskell/src/Domain/: Cell.hs  Cost.hs  Depot.hs  Drone.hs  Geometry.hs  Map.hs  NoFly.hs  Obstacle.hs  Path.hs  Tour.hs
haskell/src/IO/: Json.hs
haskell/src/Partition/: Common.hs  RegionGrow.hs  Strip.hs
haskell/test/: Spec.hs
python/: README.md  pyproject.toml
python/src/fleet/: __init__.py  cli.py  generate_map.py  io.py  map_utils.py  optimize.py  simulate.py  visualize.py
python/src/fleet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: test_generate_map.py  test_map_sizes.py  test_optimizer.py  test_simulator.py
schema/: map.schema.json  metrics.schema.json  params.schema.json  tours.schema.json
tools/: loc_count.py  loc_count.sh
