cabal-version: 2.2
name: coverage-core
version: 0.1.0.0
synopsis: Multi-drone coverage partitioning and planning core
category: Robotics
license: MIT
license-file: ../LICENSE
maintainer: coverage@example.com
build-type: Simple
extra-source-files:
    README.md
    ../schema/map.schema.json
    ../schema/params.schema.json
    ../schema/tours.schema.json
    ../schema/metrics.schema.json

library
    hs-source-dirs:
        src
    exposed-modules:
        Algorithm.AStar,
        Domain.Cell,
        Domain.Map,
        Domain.Obstacle,
        Domain.NoFly,
        Domain.Drone,
        Domain.Depot,
        Domain.Path,
        Domain.Tour,
        Domain.Cost,
        Domain.Geometry,
        IO.Json,
        Partition.RegionGrow,
        Partition.Strip,
        Partition.Common,
        Coverage.STC,
        Coverage.Boustro,
        Coverage.Repair,
        Cost.Evaluate
    other-modules:
    build-depends:
        base >=4.14 && <5,
        aeson >=2.1,
        containers >=0.6,
        vector >=0.12,
        unordered-containers >=0.2,
        text >=1.2,
        bytestring >=0.10,
        filepath,
        directory,
        mtl,
        optparse-applicative,
        transformers,
        random,
        hashable
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings,
        DeriveGeneric,
        RecordWildCards,
        LambdaCase,
        NamedFieldPuns,
        TupleSections
    ghc-options:
        -Wall
        -Wincomplete-patterns
        -Wcompat

executable coverage-partitioner
    main-is: Partitioner.hs
    hs-source-dirs:
        app
    ghc-options:
        -threaded
        -rtsopts
    build-depends:
        base,
        coverage-core,
        bytestring,
        optparse-applicative,
        aeson
    default-language: Haskell2010
    default-extensions:
        RecordWildCards

executable coverage-planner
    main-is: Planner.hs
    hs-source-dirs:
        app
    ghc-options:
        -threaded
        -rtsopts
    build-depends:
        base,
        coverage-core,
        bytestring,
        optparse-applicative,
        aeson
    default-language: Haskell2010
    default-extensions:
        RecordWildCards

test-suite coverage-core-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
        test
    ghc-options:
        -threaded
    build-depends:
        base,
        coverage-core,
        QuickCheck,
        aeson,
        bytestring,
        unordered-containers
    default-language: Haskell2010
