[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet"
version = "0.1.0"
description = "Multi-drone coverage optimizer pipeline"
readme = "README.md"
authors = [{name = "Multi-drone Coverage Contributors", email = "coverage@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "shapely>=2.0",
  "matplotlib>=3.8",
  "ortools>=9.8",
  "rich>=13.7",
  "click>=8.1",
  "networkx>=3.2",
  "pillow>=10.3"
]

[tool.uv]
dev-dependencies = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3",
  "ruff>=0.4"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B"]
